# SpriteLauncher

./: .gitignore  CMakeLists.txt  version.cmake
data/: data.qrc
specification/: manifest.json  sci.json
src/: configloader.cpp  configloader.h  download.cpp  download.h  downloadmanager.cpp  downloadmanager.h  filefunctions.cpp  filefunctions.h  launcher.cpp  launcher.h  launcheruserinterface.cpp  launcheruserinterface.h  main.cpp  settingsuserdialog.cpp  settingsuserdialog.h  temporarydirectory.cpp  temporarydirectory.h
templates/: version.h.in
